<resources>
    <string name="app_name">Selfie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="e_mail">E-Mail</string>
    <string name="remember_me">Remember Me</string>
    <string name="msg_fail_connected">Login failed, check your Internet connection and credentials.</string>
    <string name="msg_fail_register">Registration failed, check your Internet connection and credentials.</string>
    <string name="msg_empty_credentials">The credentials must not be empty.</string>
    <string name="msg_pass_not_equals">Password and confirm password must be equals!</string>
    <string name="msg_blank">Field cannot be blank</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="sepia">Sepia</string>
    <string name="black_and_white">Black and White</string>
    <string name="brightness">Brightness</string>
    <string name="camera">Camera</string>
    <string name="fail_load">Fail load data, check your Internet connection or try later.</string>
    <string name="gallery">Gallery</string>
    <string name="pb_title">Upload Selfie</string>
    <string name="pb_message">Uploading…\u000APlease wait…</string>
    <string name="msg_fail_upload">Upload fail, try later!</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="take_selfie">Take new Selfie</string>
    <string name="reminder">Reminder</string>
    <string name="profile">Profile</string>
    <string name="tools">Tools</string>
    <string name="users">Users</string>
    <string name="done">Done</string>
    <string name="not_remind">Do not Remind</string>
    <string name="logout">Logout</string>
    <string name="new_password">New password</string>
</resources>
